feat: Implement full authentication system with login, signup, and JWT